--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,9 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 Imports: 
     dplyr,
     tibble,
@@ -21,3 +23,4 @@ Remotes:
 RoxygenNote: 6.1.1
 Depends: 
     magrittr
+VignetteBuilder: knitr
