--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,8 @@
 
 export("%>%")
 export(check_input)
+export(check_input_data)
+export(check_input_match_data_questionnaire)
 export(check_input_questionnaire)
+export(check_input_samplingframe)
 importFrom(magrittr,"%>%")
